# Tradebot

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  dydx-env-requirements.txt  pyproject.toml  root  start.sh
.github/workflows/: build.yml
config/: conf.yaml
run/: check_ibeam.py  create_db.py  position_and_order.py  startup.py  update_ohlc.py  update_strategy.py
src/: app.py  calc.py  crypto.py  crypto2.py  database.py  database_2.py  db_utils.py  dydx_exchange.py  exchange.py  exchange_alpaca.py  exchange_dydx.py  exchange_factory.py  exchange_ib.py  exchanges.py  models.py  ohlc.py  ohlc_abc.py  ohlc_cryptocompare.py  ohlc_helpers.py  ohlc_ib.py  position.py  runner_crypto.py  startup.py  stocks.py  strategy.py  subsystems.py  telegram_bot.py  testbed.py  time_checker.py  tools.py
src/runners/: create_db.py  order_crypto.py  position_and_order.py  runner_strategy.py  startup.py  try.py  update_ohlc.py  update_strategy.py
tests/: test_crypto.py  test_crypto2.py  test_ohlc.py  test_strategy.py  test_tools.py
