[tool.poetry]
name = "tradebot"
version = "0.1.0"
description = ""
authors = ["Ben Hampson"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "^0.70.1"
python-binance = "^1.0.15"
numpy = "^1.21.5"
pandas = "^1.3.5"
python-telegram-bot = "^13.9"
python-decouple = "^3.5"
pytz = "^2021.3"
exchange-calendars = "^3.5"
forex-python = "^1.8"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
