[tool.poetry]
name = "tradebot"
version = "0.1.0"
description = ""
authors = ["Ben Hampson"]

[tool.poetry.dependencies]
python = "^3.8.0"
fastapi = "^0.70.1"
numpy = "^1.21.5"
pandas = "^1.3.5"
python-telegram-bot = "^13.9"
pytz = "^2021.3"
exchange-calendars = "^3.5"
forex-python = "^1.8"
uvicorn = "^0.17.4"
newtulipy = "^0.4.6"
"backports.zoneinfo" = "^0.2.1"
sqlmodel = "^0.0.6"
ib-insync = "^0.9.76"
alpaca-py = "^0.6.1"

[tool.poetry.dev-dependencies]
black = "^22.3"
isort = "^5.10.1"
pylint = "^2.12.2"
pytest = "^4.4.1"
pytest-cov = "^3.0.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
